--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,3 +2,7 @@ html{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
+
+.parrafo{
+    color: blueviolet;
+}
