Se agrego CSS al titulo y parrafo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,4 +5,16 @@ html{
 
 .parrafo{
     color: blueviolet;
+    padding: 5px;
+}
+
+.contenedor__titulo{
+    width: 70%;
+    height: 200px;
+    border: 5px;
+    border-style: dashed;
+    border-color: darkblue;
+    text-align: center;
+    margin: auto;
+    background-color: aqua;
 }
