--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,3 +18,14 @@ html{
     margin: auto;
     background-color: aqua;
 }
+
+.contenedor__cabecera{
+    width: 100%;
+    height: 40px;
+    background-color: rgb(199, 196, 21);
+    color: aliceblue;
+    margin: 0;
+    font-size: 25px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 5px auto;
+}
