--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,9 +17,11 @@ html{
     text-align: center;
     margin: auto;
     background-color: aqua;
+    
 }
 
 .contenedor__cabecera{
+    
     width: 100%;
     height: 40px;
     background-color: rgb(199, 196, 21);
@@ -28,4 +30,10 @@ html{
     font-size: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 5px auto;
+    
+}
+
+.logo{
+    height: 40px;
+    width: 40px;
 }
