--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,3 +29,13 @@ html{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 5px auto;
 }
+
+.footer{
+
+    width: 100%;
+    height: 80px;
+    background-color: #7a7a77;
+    color: aliceblue;
+    text-align: center;
+    
+}
